# urdf

./: .gitattributes  .gitignore  33.md  ARM2_analysis_report_20250704_052137.txt  ARM2_kinematics_analysis_20250703_001122.mat  ARM2_kinematics_analysis_20250703_001229.mat  ARM2_report_simple_20250702_164358.txt  ARM2_report_simple_20250702_225744.txt  ARM2_report_simple_20250704_052209.txt  ARM2_report_simple_20250704_110915.txt  ARM2_singularity_analysis_20250703_001241.mat  ARM2_workspace_analysis_20250704_052137.mat  ARM2_workspace_simple_20250702_164358.mat  ARM2_workspace_simple_20250702_225744.mat  ARM2_workspace_simple_20250704_052209.mat  ARM2_workspace_simple_20250704_110915.mat  CMakeLists.txt  MATLAB_README.md  README.md  advanced_workspace_analysis.m  cmd.md  dh.md  example_usage.m  kinematics_utils.m  matlab_workspace_analysis.m  package.xml  run_workspace_analysis.m  simple_workspace_analysis.m  test_workspace.m  user.md
config/: arm2.srdf  arm2_moveit_config.yaml  controllers.yaml  joint_limits.yaml  moveit_controllers.yaml
launch/: basic_robot.launch.py  cartesian_planning.launch.py  complete_demo.launch.py  display.launch  display.launch.py  display_with_gui.launch.py  gazebo.launch  gazebo.launch.py  interactive_teach.launch.py  minimal_control_test.launch.py  moveit_demo.launch.py  robot_control.launch.py  robot_with_controllers.launch.py  simple_moveit.launch.py  simple_workspace.launch.py  test_display.launch.py  workspace_analysis.launch.py
meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
(+10 files in other folders)
